--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 body{
-    background-color: bisque;
+    background-color: aliceblue;
 }
 
-a.loc{
-    background-color: #ff0000;
+header.a.loc{
+    background-color:  aliceblue;
     color: #ffee00;
     padding: 5px 10px;
     text-decoration: none;
