--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,31 @@ body{
     background-color: aliceblue;
 }
 
-header.a.loc{
-    background-color:  aliceblue;
-    color: #ffee00;
+.header{
+    width: 100%;
+}
+
+.header a.loc{
+    color: gold;
+    /* align-content: center; */
     padding: 5px 10px;
+    font-size: 40px;
     text-decoration: none;
     border-radius: 5px;
 }
+
+.header h1{
+    font-size: 50px;
+    align-content: center;
+}
+
+h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: italic;
+    color: blue;
+    text-align: center;
+}
+
 .home-images img{
     border: cadetblue solid 5px;
     border-radius: 5px;
