--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,10 @@ body{
 
 .header a.loc{
     color: gold;
-    /* align-content: center; */
-    padding: 5px 10px;
+    /* padding: 5px 10px; */
     font-size: 40px;
     text-decoration: none;
-    border-radius: 5px;
+    /* border-radius: 5px; */
 }
 
 .header h1{
@@ -20,7 +19,8 @@ body{
     align-content: center;
 }
 
-h1{
+.header p.title{
+    font-size: 50px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-style: italic;
     color: blue;
