--- a/css/style.css
+++ b/css/style.css
@@ -1,56 +1,87 @@
 body{
-    background-color: darkgray;
+    background-color: antiquewhite;
 }
 
-.header{
-    width: 100%;
+#header{
+    height: 60px;
+    font-size: 25px;
 }
 
-.header a.loc{
-    color: gold;
-    font-size: 30px;
-    text-decoration: none;
+.side{
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
 }
 
-.header a.loc:hover{
-    font-size: 35px;
-    background-color: aquamarine;
-    padding: 2px;
+.side a:hover{
+    background-color: rgb(165, 42, 42, 1);
+    padding: 0 8px;
     border-radius: 2px;
 }
 
-.header #title{
-    font-size: 50px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-style: italic;
-    color: blue;
-    text-align: center;
-}
-
-.header #phone{
-    font-size: 25px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-style: italic;
-    color: gold;
-}
-
-.home-images img{
-    /* padding: 6px;
-    background: #ff0000; */
-    /* border: cadetblue solid 5px; */
-    /* border-radius: 5px; */
-    width: 100%;
-}
-
-a.mybtn{
-    background-color: #ff0000;
-    color: #ffee00;
-    padding: 5px 10px;
+.side a.loc{
+    float: left;
+    width: 25%;
     text-decoration: none;
 }
 
-.footer a.contacts{
+.side a.phone{
+    float: right;
+    width: 25%;
+}
+
+h1{
     color: gold;
+    font-family: 'Segoe UI', sans-serif;
+    font-style: italic;
+    font-size: 40px;
+    text-align: center;
+    text-shadow: 1px 1px 2px black;
+}
+
+#menu{
+    background-color: rgb(95, 158, 160, .5);
+    line-height: 35px;
     font-size: 20px;
+    font-family: 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    text-align: center;
+}
+
+a.btnMenu{
+    color: goldenrod;
+    background-color: antiquewhite;
+    text-decoration: none;
+    margin: 10px;
+    padding: 4px 8px;
+    border-radius: 2px;
+}
+
+a.btnMenu:hover{
+    background-color: rgb(250, 235, 215, .5);
+    padding: 5px 9px;
+    border-radius: 2px;
+    font-size: 22px;
+}
+
+
+#footer{
+    background-color: rgb(165, 42, 42, 0.5);
+    height: 30px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+.side a#contacts{
+    color: darkgreen;
+    text-decoration: none;
+}
+
+.side a#home{
+    color: darkgreen;
     text-decoration: none;
 }
